; ModuleID = '/home/carl/AnghaBench/ish/tests/manual/extr_fibbonaci.c_fib.c'
source_filename = "/home/carl/AnghaBench/ish/tests/manual/extr_fibbonaci.c_fib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @fib(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp ule i64 %4, 1
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i64 1, i64* %2, align 8
  br label %15

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = sub i64 %8, 1
  %10 = call i64 @fib(i64 %9)
  %11 = load i64, i64* %3, align 8
  %12 = sub i64 %11, 2
  %13 = call i64 @fib(i64 %12)
  %14 = add i64 %10, %13
  store i64 %14, i64* %2, align 8
  br label %15

15:                                               ; preds = %7, %6
  %16 = load i64, i64* %2, align 8
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
